--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ Repository = "https://github.com/PlanesLab/cyclic-gMISpy"
 Issues = "https://github.com/PlanesLab/cyclic-gMISpy/issues"
 
 [tool.hatch.build.targets.wheel]
-packages = ["cyclic-gMISpy-package"]
+packages = ["cyclic_gMISpy_package"]
 
 [tool.hatch.build.targets.wheel.force-include]
-"cyclic-gMISpy-package" = "cyclic_gmispy"
+"cyclic_gMISpy_package" = "cyclic_gMISpy_package"
